k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale-service
spec:
  selector:
    app: radicale
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5232
  type: NodePort
